adding new collumn to monkey table, starting on adding and retrieving items to database

--- a/app/views/animals/creat_animals.html.erb
+++ b/app/views/animals/creat_animals.html.erb
@@ -1,8 +1,5 @@
-<h1>Animals#creat_animals</h1>
-<p>Find me in app/views/animals/creat_animals.html.erb</p>
-
-<%= form_for @animal, url: {action: "save_animal"} do |f| %>
-  <%= f.text:field :name %>
+<%= form_for @animal, url: {action: "creat_animals"} do |f| %>
+  <%= f.text_field :name %>
   <%= f.text_field :image %>
   <%= f.submit "Create" %>
 
