--- a/app/views/animals/view_animals.html.erb
+++ b/app/views/animals/view_animals.html.erb
@@ -1,9 +1,4 @@
-<h1>Animals#view_animals</h1>
-<p>Find me in app/views/animals/view_animals.html.erb</p>
+aa
+<%= puts @animals %>
 
-class AnimalsController < ApplicationController
- def view_animal
-+   @animals = Animal.all
-  end  
-
-def create_animal
+aa
